Implement graphql scan